--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
       </ul>
       <div>
         <div id="social-links">
-          <a href="https://github.com/maykbrito"target="_blank">
+          <a href="https://github.com/SaraMonique13/"target="_blank">
           <ion-icon name="logo-github"></ion-icon>
           </a>
           <a href="https://instagram.com/saramonique.personal" target="blank">
           <ion-icon name="logo-instagram"></ion-icon>
           </a>
-          <a href="https://youtube.com/maykbrito" target="blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+          <a href="https://www.tiktok.com/@sara.monique13" target="blank">
+          <ion-icon name="logo-tiktok"></ion-icon>
           </a>
-          <a href="https://linkedin.com/in/maykbrito" target="_blank">
+          <a href="https://www.linkedin.com/in/sarah-monique-512b3919b" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
           </a>
       </div>
