--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
       <ul>
         <li>
-          <a href="#">Treinos personalizados e Consultoria</a>
+          <a href="./Aulas presenciais.jpeg">Valores presenciais</a>
         </li>
         <li>
           <a href="https://wa.link/ijnycf" target="_blank"
@@ -36,7 +36,7 @@
           >
         </li>
         <li>
-          <a href="https://pages.mfitpersonal.com.br/p/zuj" target="blank"
+          <a href="./Consultoria.jpeg" target="blank"
             >Valores de Consultoria Online</a
           >
         </li>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <footer>
-      Feito com ♥ pela <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
+      Feito com ♥ </a>
     </footer>
     <div>
       <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
