--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
       <ul>
         <li>
-          <a href="./Aulas presenciais.jpeg">Valores presenciais</a>
+          <a href="./Aulas presenciais.jpeg" target="_blank">Valores presenciais</a>
         </li>
         <li>
           <a href="https://wa.link/ijnycf" target="_blank"
