--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./avatar sara menor.png" alt="rosto da sara" />
+        <img src="./dark img.jpeg" alt="rosto da sara" />
         <p>@saramonique.personal</p>
       </div>
 
