--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./dark img.jpeg" alt="rosto da sara" />
+        <img src="./avatar dark img.jpg" alt="rosto da sara" />
         <p>@saramonique.personal</p>
       </div>
 
