--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./avatar dark img.jpg" alt="rosto da sara" />
-        <p>@saramonique.personal</p>
+        <img src="./dark mode new.png" alt="rosto da sara" />
+        <p>@personal.saramonique</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
