--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./dark mode new.png" alt="rosto da sara" />
+        <img src="./ligh mode new.png" alt="rosto da sara" />
         <p>@personal.saramonique</p>
       </div>
 
